# apitest

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
apitest/: __init__.py  config.py
apitest/areas/: __init__.py  base.py  functional.py
apitest/cli/: init_wizard.py  main.py
apitest/engine/: __init__.py  cache.py  conftest_template.py  fake_data.py  formatter.py  generator.py  llm_client.py  mock_server.py  parser.py  preflight.py  reporter.py  runner.py  schema_corrector.py
apitest/models/: __init__.py  endpoint.py  example.py
demo/: xiaohongshu-api.md
demo/specs/: xiaohongshu-openapi.yaml
docs/superpowers/plans/: 2026-06-15-apitest-cli-implementation.md  2026-06-16-schema-data-generation.md
docs/superpowers/specs/: 2026-06-15-apitest-cli-design.md
tests/: conftest.py  test_areas.py  test_cli.py  test_config.py  test_fake_data.py  test_formatter.py  test_generator.py  test_init_wizard.py  test_integration.py  test_llm_client.py  test_mock_server.py  test_parser.py  test_reporter.py  test_runner.py  test_schema_corrector.py
