[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apitest"
version = "0.1.0"
description = "AI-powered API test automation CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "questionary>=2.0",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "allure-pytest>=2.13",
    "openai>=1.30",
    "anthropic>=0.30",
    "prance>=0.22",
    "openapi-core>=0.19",
    "flask>=3.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
apitest = "apitest.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["apitest"]
